# imsub-standalone

./: Cargo.toml  LICENSE  config.toml
crates/twitch_api/: Cargo.toml
crates/twitch_api/src/: call.rs  client.rs  error.rs  lib.rs  oidc_client.rs
crates/twitch_api/src/call/: moderation.rs  request.rs  subscription.rs  user.rs
crates/twitch_api/src/call/auth/: get_client_credential.rs  get_url.rs  process_code.rs  refresh_token.rs
crates/twitch_api/src/call/moderation/: get_banned_users.rs  get_moderators.rs
crates/twitch_api/src/call/subscription/: check_user_subscription.rs  get_broadcaster_subscriptions.rs
crates/twitch_api/src/call/user/: get.rs
crates/twitch_api/src/client/: auth.rs  request.rs
crates/twitch_api/src/client/auth/: get_client_credential.rs  get_url.rs  process_code.rs  refresh_token.rs
crates/twitch_api/src/client/moderation/: get_banned_users.rs  get_moderators.rs
crates/twitch_api/src/client/subscription/: check_user_subscription.rs  get_broadcaster_subscriptions.rs
crates/twitch_api/src/client/user/: get.rs
res/locale/en/: command.ftl  start.ftl
res/locale/it/: command.ftl  error.ftl  start.ftl
src/: config.rs  database.rs  locale.rs  main.rs  telegram.rs
src/database/: prelude.rs  roles.rs  twitch_subscriptions.rs  twitch_users.rs  users.rs
src/telegram/: command.rs  handler.rs
src/telegram/command/: help.rs  reset.rs  start.rs
