[package]
name = "imsub-standalone"
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Grassi <alessandrograssi17@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = true

[workspace]
members = ["crates/*"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
imsub-twitch-api = { path = "crates/twitch_api" }
fluent = "0.16"
fluent-bundle = "0.15.2"
unic-langid = "0.9.0"
intl-memoizer = "0.5.1"
thiserror = "1"
url = "2.3"
teloxide = { version = "0.11", features = ["macros", "throttle", "cache-me"] }
itertools = "0.10"