[package]
name = "imsub-twitch-api"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4"
openidconnect = "2"
reqwest = { version = "0.11", features = ["json"] }
cached = "0.40"
chrono = "0.4"
url = "2.2"
tracing = "0.1"
itertools = "0.10"